<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="E_MotorState" Id="{f8905df8-4147-49b6-aa18-30703334bd68}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_MotorState :
(
    OFF     	:= 0,
    MOVING_FWD 	:= 1,
    MOVING_BCK  := 2,
    STOP	 	:= 3
);
 END_TYPE;
]]></Declaration>
  </DUT>
</TcPlcObject>