<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_MotorData" Id="{3a83415a-8d6b-422a-afc8-5484d1fceff9}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
{attribute 'OPC.UA.DA' := '1'}
TYPE ST_MotorData :
STRUCT
	{attribute 'OPC.UA.DA.Access' := '1'}
    state         	: E_MotorState;        (* Current state of the motor *)
	{attribute 'OPC.UA.DA.Access' := '1'}
	command        : E_MotorCommand;      (* Current command of the motor *)
	{attribute 'OPC.UA.DA.Access' := '1'}
	moduleState   	: E_ModuleState;       (* Module state: Manual, Auto, Off *)
	{attribute 'OPC.UA.DA.Access' := '1'}
    enabled       	: BOOL;                (* Motor enable/disable status *)
	{attribute 'OPC.UA.DA.Access' := '1'}
	currentSpeed	: LREAL;
	{attribute 'OPC.UA.DA.Access' := '1'}
    fault			: ST_ModuleAlarm;		
	{attribute 'OPC.UA.DA.Access' := '1'}
    elapsedTime   	: TIME;                 (* Time elapsed in current state *)
	{attribute 'OPC.UA.DA.Access' := '1'}
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>