<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_MotorError" Id="{bf05d7e9-236e-4df4-97a7-e489d1810c92}">
    <Declaration><![CDATA[TYPE ST_MotorError :
STRUCT 
	warnRequestAuto:		STRING	:= 'request auto control from parent em';
	infoControlledByParent:	STRING	:= 'controlled by parent em';
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>